# geocoder

./: .clang  .clang-format  .clang_complete  CMakeLists.txt  README.md  build.sh  env.cmake  tags  test.sh  version.cmake
config/: geocoder.xml
inc/: GeocoderVersion.h.in
inc/geo/: answer.h  geocoderbase.h  geopool.h  geoyandex.h  location.h
inc/libcurl/: libcurl.h
inc/logger/: config.h  logger.h  types.h
inc/utils/: parse_cmd.h  utils.h
inc/utils/libcurl/: libcurl.h
inc/utils/logger/: config.h  logger.h  types.h
src/: main.cpp
src/geo/: geocoderbase.cpp  geopool.cpp  geoyandex.cpp
src/libcurl/: libcurl.cpp
src/logger/: config.cpp  logger.cpp
src/utils/: parse_cmd.cpp  utils.cpp
src/utils/libcurl/: libcurl.cpp
src/utils/logger/: config.cpp  logger.cpp
test/: addrs.txt  test_geocoder.cpp  test_main.cpp  test_utils.cpp  test_utils.h
